Add twig-bundle and improving routes

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
 index:
   path: /{link_id}
   controller: App\Controller\CountRedirectController::countRedirect
+  requirements:
+    link_id: '\S+'
+home:
+  path: /
+  controller: App\Controller\HomeController::home
