--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "bootstrap": "^4.3.1",
+        "jquery": "^3.4.1",
+        "popper.js": "^1.15.0",
+        "string-similarity": "^3.0.0"
     }
 }
