--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     },
     "dependencies": {
         "bootstrap": "^4.3.1",
+        "chart.js": "^2.8.0",
         "jquery": "^3.4.1",
+        "moment": "^2.24.0",
         "popper.js": "^1.15.0",
         "string-similarity": "^3.0.0"
     }
